fixes overflow bug

--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -22,6 +22,14 @@
     align-items: center;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.text-overflow-ellipsis {
+    text-overflow: ellipsis;
+}
+
 .overflow-y-auto {
     overflow-y: auto;
 }
